--- a/index.html
+++ b/index.html
@@ -28,12 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Restaurantly - v1.2.0
-  * Template URL: https://bootstrapmade.com/restaurantly-restaurant-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+
 </head>
 
 <body>
@@ -93,7 +88,7 @@
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://youtu.be/wUvHYDy6muo " class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
+          <a href="https://youtu.be/FzNXC88yvms  " class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
         </div>
 
       </div>
