--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-
+  <!-- =======================================================
+  * Template Name: Restaurantly - v1.2.0
+  * Template URL: https://bootstrapmade.com/restaurantly-restaurant-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
 
 <body>
@@ -53,7 +58,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html">Eden on the Bay</a></h1>
+      <h1 class="logo mr-auto" ><a href="index.html">Eden on the Bay</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -67,7 +72,7 @@
           <li><a href="#gallery">Gallery</a></li>
           <li><a href="#chefs">Chefs</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li>
+          <!-- <li class="book-a-table text-center"><a href="#book-a-table">Book a table</a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -79,7 +84,7 @@
     <div class="container position-relative text-center text-lg-left" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Welcome to <span>Eden on the Bay</span></h1>
+          <h1 >Welcome to <span >Eden on the Bay</span></h1>
           <h2>Delivering great food for more than 11 years!</h2>
 
           <div class="btns">
@@ -88,7 +93,7 @@
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-delay="200">
-          <a href="https://youtu.be/FzNXC88yvms  " class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
+          <a href="https://youtu.be/FzNXC88yvms " class="venobox play-btn" data-vbtype="video" data-autoplay="true"></a>
         </div>
 
       </div>
@@ -104,7 +109,7 @@
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="zoom-in" data-aos-delay="100">
             <div class="about-img">
-              <img src="assets/img/about.jpg" alt="">
+              <img src="assets/img/outside3.jpeg" alt="">
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
@@ -476,7 +481,7 @@
     </section><!-- End Events Section -->
 
     <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table">
+    <!-- <section id="book-a-table" class="book-a-table">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
@@ -524,7 +529,7 @@
         </form>
 
       </div>
-    </section><!-- End Book A Table Section -->
+    </section>End Book A Table Section -->
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
@@ -613,8 +618,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-1.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/outside.jpeg" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/outside2.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -622,7 +627,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-2.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+                <img src="assets/img/gallery/bar.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -630,7 +635,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
               <a href="assets/img/gallery/gallery-3.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+                <img src="assets/img/gallery/bar2.jpeg" alt="" class="img-fluid">
               </a>
             </div>
           </div>
