--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container d-flex">
       <div class="contact-info mr-auto">
         <i class="icofont-phone"></i> 021 554 9660
-        <span class="d-none d-lg-inline-block"><i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sun: 08:00 AM - 18:00 PM</span>
+        <span class="d-none d-lg-inline-block"><i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sat: 08:00 AM - 18:00 PM</span>
       </div>
       <div class="languages">
         <!-- <ul>
@@ -83,13 +83,13 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative text-center text-lg-left" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
-        <div class="col-lg-8">
+        <div class="col-md-8">
           <h1 >Welcome to <span >Eden on the Bay</span></h1>
           <h2>Delivering great food for more than 11 years!</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
-            <a href="#book-a-table" class="btn-book animated fadeInUp scrollto">Book a Table</a>
+            <a href="#contact" class="btn-book animated fadeInUp scrollto">Contact Us</a>
           </div>
         </div>
         <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-delay="200">
