--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative text-center text-lg-left" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
-        <div class="col-md-8">
-          <h1 >Welcome to <span >Eden on the Bay</span></h1>
+        <div class="col-md-8"><!--changed large to medium-->
+          <h1 >Welcome to<br> <span >Eden on the Bay</span></h1>  <!--Put break in there-->
           <h2>Delivering great food for more than 11 years!</h2>
 
           <div class="btns">
