--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   <div id="topbar" class="d-flex align-items-center fixed-top">
     <div class="container d-flex">
       <div class="contact-info mr-auto">
-        <i class="icofont-phone"></i> 021 554 9660
-        <span class="d-none d-lg-inline-block"><i class="icofont-clock-time icofont-rotate-180"></i> Mon-Sat: 08:00 AM - 18:00 PM</span>
+        <i class="icofont-phone">021 554 9660</i> 
+        <span class="d-none d-lg-inline-block"><i class="icofont-clock-time ">Mon-Sat: 08:00 AM - 18:00 PM</i> </span>
       </div>
       <div class="languages">
         <!-- <ul>
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-md-8"><!--changed large to medium-->
           <h1 >Welcome to<br> <span >Eden on the Bay</span></h1>  <!--Put break in there-->
-          <h6>Delivering great food for more than 11 years!</h6>
+          <h5>Delivering great food for more than 11 years!</h5>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
