--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <div class="row">
         <div class="col-md-8"><!--changed large to medium-->
           <h1 >Welcome to<br> <span >Eden on the Bay</span></h1>  <!--Put break in there-->
-          <h5>Delivering great food for more than 11 years!</h5>  <!--for over??-->
+          <h5>Delivering great food for over 11 years!</h5>  <!--for over??-->
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
