--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Eden on the Bay</title>
+  <title>Eden Café</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -58,7 +58,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto" ><a href="index.html">Eden on the Bay</a></h1>
+      <h1 class="logo mr-auto" ><a href="index.html">Eden Café</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -84,7 +84,7 @@
     <div class="container position-relative text-center text-lg-left" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-md-8"><!--changed large to medium-->
-          <h1 >Welcome to<br> <span >Eden on the Bay</span></h1>  <!--Put break in there-->
+          <h1 >Welcome to <span >Eden Café</span></h1>  <!--Put break in there-->
           <h5>Serving great food for over 11 years!</h5>  <!--for over??-->
 
           <div class="btns">
@@ -907,14 +907,14 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Eden on The Bay</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>Eden Café</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/restaurantly-restaurant-template/ -->
-        Designed by <a href="">Eden</a>
+        Designed by <a href="">EdenEden Café</a>
       </div>
     </div>
   </footer><!-- End Footer -->
