--- a/index.html
+++ b/index.html
@@ -113,20 +113,24 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h3>About Us</h3>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We are situated in Big Bay with one of the most beautiful views in the world. Enjoy your meal while looking across the bay towards Robben Island and Table Mountain. In the foreground you can watch Kite Boarders from all over the world enjoying the conditions Big Bay has become famous for.
+
+                Eden Café can best be described as a beach bistro, offering fresh, lovingly prepared and beautifully presented meals. We are fully licensed and carry a range of select wines, beers and ciders. Enjoy our classic and unique cocktails at sunset, or try one of our warm beverages expertly prepared by our trained baristas.
+              
             </p>
             <ul>
-              <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="icofont-check-circled"></i> View of Table Mountain.</li>
+              <li><i class="icofont-check-circled"></i> View of Roben Island.</li>
+              <li><i class="icofont-check-circled"></i> Friendly and accomadating staff.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+                We have grown a reputation amongst our regular patrons and international quests as offering the best coffee on the West Coast. We have selected “illy” as our preferred brand of coffee.
+
+                Your satisfaction is paramount to us. Please ask for me, Leon, the owner or Michelle or Zander, our highly competent managers should you require any assistance.
+                
+                Please ensure that you have obtained one of our Eden Cafe LOYALTY CARDS and thank you once again for your patronage.
             </p>
           </div>
         </div>
