--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
 
         <div class="section-title">
           <h2>Menu</h2>
-          <p>Check Our Tasty Menu</p>
+          <p>Some of our Signature Dishes.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="menu-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-starters">Starters</li>
-              <li data-filter=".filter-salads">Salads</li>
-              <li data-filter=".filter-specialty">Specialty</li>
+              <li data-filter=".filter-starters">Breakfast</li>
+              <li data-filter=".filter-salads">Bistro Meals</li>
+              <li data-filter=".filter-specialty">Desserts</li>
             </ul>
           </div>
         </div>
@@ -201,92 +201,92 @@
         <div class="row menu-container" data-aos="fade-up" data-aos-delay="200">
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/bagel.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>R15.95</span>
+              <a href="#">English Breakfast</a><span>R74.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Two Eggs,Bacon,Pork Sausage, Grilled Tomato, Baked Beans & Fries, served with Toast
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/bread-barrel.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/nederburg56.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Bread Barrel</a><span>R16.95</span>
+              <a href="#">Flapjacks</a><span>R56.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Served with Cinnamon, king Sugar, Fresh Banana Slices, Walnuts, Mascarpone Cheess & Maple Syrup
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-starters">
-            <img src="assets/img/menu/cake.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/wrap.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Crab Cake</a><span>R17.95</span>
+              <a href="#">Seaside Breakfast</a><span>R64.00</span>
             </div>
             <div class="menu-ingredients">
-              A delicate crab cake served on a toasted roll with lettuce and tartar sauce
+              Smoked Salmon Slithers in Creamy Scrambled Eggs, served with panini with Spring Onion Garnish
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/caesar.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/burger.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Caesar Selections</a><span>R18.95</span>
+              <a href="#">Signature Burger</a><span>R95.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+              Delicious Homemade Beef and Bacon Burger, Catalina Sauce, Gherkins, Tomato and Mixed Leaves served with Fries
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/tuscan-grilled.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/wrap2.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Tuscan Grilled</a><span>R19.95</span>
+              <a href="#">Gelato</a><span>R38.00</span>
             </div>
             <div class="menu-ingredients">
-              Grilled chicken with provolone, artichoke hearts, and roasted red pesto
+              Strawberry, Chocolate & Vanilla
             </div>
           </div>
-
+<!--here-->
           <div class="col-lg-6 menu-item filter-starters">
             <img src="assets/img/menu/mozzarella.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Mozzarella Stick</a><span>R14.95</span>
+              <a href="#">Eggs Benedict</a><span>R72.00</span>
             </div>
             <div class="menu-ingredients">
-              Lorem, deren, trataro, filede, nerada
+                Two Poached Eggs, Gypsy Ham & Hollandaise Sauce, served on Toasted English  Muffin
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/greek-salad.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/croisant.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Greek Salad</a><span>R19.95</span>
+              <a href="#">Nachos</a><span>R75.00</span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach, crisp romaine, tomatoes, and Greek olives
+              Cheese, Guacamole, Tomato Salsa & Bulgarian Yoghurt
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
-            <img src="assets/img/menu/spinach-salad.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/burger2.jpeg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Spinach Salad</a><span>R19.95</span>
+              <a href="#">Calamari Basket</a><span>R98.00</span>
             </div>
             <div class="menu-ingredients">
-              Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette
+              Crumbed Calamri Strips, Homemade Tartar & Prego Sauce, served with Fries
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-specialty">
-            <img src="assets/img/menu/lobster-roll.jpg" class="menu-img" alt="">
+            <img src="assets/img/menu/pancake2.jpeg" class="menu-img" alt="" style="background-size: 100% auto;">
             <div class="menu-content">
-              <a href="#">Lobster Roll</a><span>R112.95</span>
+              <a href="#">Giant Muffins</a><span>R36.00</span>
             </div>
             <div class="menu-ingredients">
-              Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll
+              Served with Preserves
             </div>
           </div>
 
